// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeRepo createAttribute Should create a new attribute 1`] = `"INSERT @value0 IN @@value1 RETURN NEW"`;

exports[`AttributeRepo createAttribute Should create a new attribute 2`] = `
Object {
  "@value1": "core_attributes",
  "value0": Object {
    "_key": "test_attribute",
    "format": "text",
    "label": Object {
      "en": "",
      "fr": "",
    },
    "system": true,
    "type": "standard",
  },
}
`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 1`] = `
"
                    FOR e IN @@value0
                        FILTER e._to == @value1
                        REMOVE e IN @@value0
                    "
`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 2`] = `
Object {
  "@value0": "core_edge_libraries_attributes",
  "value1": "core_attributes/test_attribute",
}
`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 3`] = `"REMOVE @value0 IN @@value1 RETURN OLD"`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 4`] = `
Object {
  "@value1": "core_attributes",
  "value0": Object {
    "_key": "test_attribute",
  },
}
`;

exports[`AttributeRepo getAttribute Should filter 1`] = `"FOR a IN core_attributes FILTER LIKE(a.@filterKey0, @filterValue0, true) FILTER a.@filterKey1 == @filterValue1 RETURN a"`;

exports[`AttributeRepo getAttribute Should filter 2`] = `
Object {
  "filterKey0": "_key",
  "filterKey1": "type",
  "filterValue0": "%test%",
  "filterValue1": "advanced",
}
`;

exports[`AttributeRepo getAttribute Should filter label on any language 1`] = `"FOR a IN core_attributes FILTER LIKE(a.label.fr, @filterValue0, true) OR LIKE(a.label.en, @filterValue0, true) RETURN a"`;

exports[`AttributeRepo getAttribute Should filter label on any language 2`] = `
Object {
  "filterValue0": "%test%",
}
`;

exports[`AttributeRepo getAttribute Should filter with a LIKE on ID 1`] = `"FOR a IN core_attributes FILTER LIKE(a.@filterKey0, @filterValue0, true) RETURN a"`;

exports[`AttributeRepo getAttribute Should filter with a LIKE on ID 2`] = `
Object {
  "filterKey0": "_key",
  "filterValue0": "%test%",
}
`;

exports[`AttributeRepo getAttribute Should return all libs if no filter 1`] = `"FOR a IN core_attributes RETURN a"`;

exports[`AttributeRepo getAttribute Should return all libs if no filter 2`] = `Object {}`;

exports[`AttributeRepo updateAttribute Should update an existing attribute 1`] = `"UPDATE @value0 IN @@value1 RETURN NEW"`;

exports[`AttributeRepo updateAttribute Should update an existing attribute 2`] = `
Object {
  "@value1": "core_attributes",
  "value0": Object {
    "_key": "test_attribute",
    "format": "text",
    "label": Object {
      "fr": "Test",
    },
    "system": true,
    "type": "standard",
  },
}
`;
